--- a/src/sample/ADM/dashboard.fxml
+++ b/src/sample/ADM/dashboard.fxml
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ADM.dashboardController">
-   <Label text="dashboard" />
-   <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
-      <Button fx:id="accountsManagementBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callAccountsManagement" text="Accounts Management" StackPane.alignment="TOP_LEFT">
+<StackPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ADM.dashboardController">
+   <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" style="-fx-background-color: #3b3b3b;" stylesheets="@../../styles/style.css" StackPane.alignment="TOP_CENTER">
+      <Button fx:id="accountsManagementBTN" minHeight="40.0" mnemonicParsing="false" onAction="#callAccountsManagement" stylesheets="@../../styles/style.css" text="Accounts Management" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="190.0" top="7.0" />
+            <Insets left="190.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="dashboardBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callDashboard" text="DashBoard" StackPane.alignment="TOP_LEFT">
+      <Button fx:id="dashboardBTN" disable="true" minHeight="40.0" minWidth="80.0" mnemonicParsing="false" onAction="#callDashboard" text="DashBoard" textFill="#f5f0f0" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="110.0" top="7.0" />
+            <Insets left="110.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../../photos/logout.png" />
+               <Image url="@../../photos/logoutDark.png" />
             </ImageView>
          </graphic>
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets right="15.0" top="7.0" />
+            <Insets />
          </StackPane.margin>
       </Button>
-      <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" StackPane.alignment="TOP_LEFT">
+      <Label prefHeight="16.0" prefWidth="99.0" text="OPHTHALMA" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <padding>
             <Insets left="10.0" />
          </padding>
@@ -51,44 +57,161 @@
             <Insets top="11.0" />
          </StackPane.margin>
       </Label>
-      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="10.0" />
          </font>
          <graphic>
             <ImageView fitHeight="22.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../../photos/settings.png" />
+               <Image url="@../../photos/settingDark.png" />
             </ImageView>
          </graphic>
          <StackPane.margin>
-            <Insets right="55.0" top="7.0" />
+            <Insets right="40.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../../photos/notifications.png" />
+               <Image url="@../../photos/notificationDark.png" />
             </ImageView>
          </graphic>
          <font>
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="95.0" top="7.0" />
+            <Insets right="80.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../../photos/chat.png" />
+               <Image url="@../../photos/chatDark.png" />
             </ImageView>
          </graphic>
          <font>
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="135.0" top="7.0" />
+            <Insets right="120.0" />
          </StackPane.margin>
       </Button>
+      <effect>
+         <DropShadow />
+      </effect>
+   </StackPane>
+   <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #2e2e2e;" stylesheets="@../../styles/style.css">
+      <StackPane.margin>
+         <Insets top="40.0" />
+      </StackPane.margin>
+      <children>
+         <HBox maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+            <StackPane.margin>
+               <Insets bottom="40.0" left="20.0" right="20.0" top="200.0" />
+            </StackPane.margin>
+            <children>
+               <BarChart fx:id="patientsBarChart" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: white;" title="Patients Visits">
+                 <xAxis>
+                   <CategoryAxis fx:id="barX" side="BOTTOM" />
+                 </xAxis>
+                 <yAxis>
+                   <NumberAxis fx:id="barY" side="LEFT" />
+                 </yAxis>
+                  <HBox.margin>
+                     <Insets right="20.0" top="20.0" />
+                  </HBox.margin>
+               </BarChart>
+               <PieChart fx:id="genderPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: white;" title="Patients Ratio (Gender)">
+                  <HBox.margin>
+                     <Insets right="20.0" top="20.0" />
+                  </HBox.margin>
+               </PieChart>
+               <PieChart fx:id="ratioPieChart" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: blue; -fx-background-color: white;" title="Patients Ratio (Age Group)">
+                  <HBox.margin>
+                     <Insets top="20.0" />
+                  </HBox.margin>
+               </PieChart>
+            </children>
+         </HBox>
+         <Button fx:id="yearlyBTN" mnemonicParsing="false" onAction="#callYearly" style="-fx-background-color: #3b3b3b;" text="YEAR" textFill="WHITE" StackPane.alignment="BOTTOM_LEFT">
+            <StackPane.margin>
+               <Insets bottom="10.0" left="20.0" />
+            </StackPane.margin>
+         </Button>
+         <Button fx:id="monthlyBTN" layoutX="30.0" layoutY="537.0" mnemonicParsing="false" onAction="#callMonthly" style="-fx-background-color: #3b3b3b;" text="MONTH" textFill="WHITE" StackPane.alignment="BOTTOM_LEFT">
+            <StackPane.margin>
+               <Insets bottom="10.0" left="90.0" />
+            </StackPane.margin>
+         </Button>
+         <Button fx:id="weaklyBTN" layoutX="105.0" layoutY="537.0" mnemonicParsing="false" onAction="#callWeakly" style="-fx-background-color: #3b3b3b;" text="WEAKLY" textFill="WHITE" StackPane.alignment="BOTTOM_LEFT">
+            <StackPane.margin>
+               <Insets bottom="10.0" left="175.0" />
+            </StackPane.margin>
+         </Button>
+         <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets left="20.0" right="20.0" top="20.0" />
+            </StackPane.margin>
+            <children>
+               <Label alignment="CENTER" minWidth="110.0" text="EMAIL              : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="195.0" top="60.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="195.0" top="95.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="195.0" top="130.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0" text="DESIGNATIION : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="195.0" top="25.0" />
+                  </StackPane.margin>
+               </Label>
+               <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;" StackPane.alignment="TOP_LEFT">
+                  <children>
+                     <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+                        <image>
+                           <Image url="@../../photos/user.jpeg" />
+                        </image>
+                     </ImageView>
+                     <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0" text="Name" textAlignment="CENTER" />
+                     <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0" prefWidth="156.0" text="Role" textAlignment="CENTER" />
+                  </children>
+                  <StackPane.margin>
+                     <Insets />
+                  </StackPane.margin>
+               </AnchorPane>
+               <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="310.0" top="25.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="310.0" top="60.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="310.0" top="95.0" />
+                  </StackPane.margin>
+               </Label>
+               <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0" text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
+                  <StackPane.margin>
+                     <Insets left="310.0" top="130.0" />
+                  </StackPane.margin>
+               </Label>
+            </children>
+            <effect>
+               <DropShadow />
+            </effect>
+         </StackPane>
+      </children>
    </StackPane>
 </StackPane>
